--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/4. 系统配置/1. 新增系统配置.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/4. 系统配置/1. 新增系统配置.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.4 系统配置
+
+#### 4.4.1 新增系统配置
+
+本节为您介绍如何新增系统配置。
+
+##### 说明：平台支持用户新增系统全局配置项，用来规范具体项目的开发。
+
+#### 4.4.1.1 前提条件
+
+a）您需要拥有“系统配置”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.4.1.2 操作步骤
+
+a）进入(后端)全自动开发平台，单击上方菜单区系统配置选项，进入系统配置管理页面，单击新增。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/image.png)
+
+##### 图1-1 进入系统配置管理页面
