--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/4. 系统配置/1. 新增系统配置.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/4. 系统配置/1. 新增系统配置.md
@@ -18,13 +18,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入(后端)全自动开发平台，单击上方菜单区系统配置选项，进入系统配置管理页面，单击新增。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/image.png)
+![image](https://user-images.githubusercontent.com/79617492/196904816-0fe20164-3b76-4c16-acc2-92b68dc6e825.png)
 
 ##### 图1-1 进入系统配置管理页面
 
 b）系统显示新增全局配置页面，输入全局配置项的名称、配置值及描述信息，输入完成后单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196904833-dae957d3-34f6-442d-b87d-01598b8d5e6c.png)
 
 ##### 图1-2 输入全局配置项相关信息
 
