--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/1. 查看组件信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/1. 查看组件信息.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.5 组件列表
+
+#### 4.5.1 查看组件信息
+
+本节为您介绍如何查看(后端)全自动开发平台当前可用的所有组件信息。
+
+##### 说明：组件是用户使用(后端)全自动开发平台进行项目开发时的重要工具，通过使用不同组件可以设计实现各种功能，当现有组件无法满足开发需求时，用户还可以导入自定义组件来实现特定功能。
+
+#### 4.5.1.1 前提条件
+
+a）您需要拥有“组件列表”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.5.1.2 操作步骤
