--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/1. 查看组件信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/1. 查看组件信息.md
@@ -15,3 +15,17 @@ a）您需要拥有“组件列表”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 #### 4.5.1.2 操作步骤
+
+a）进入(后端)全自动开发平台，选择上方菜单区组件列表选项。
+
+b）进入组件列表页面，该页面集合了平台当前可用的所有组件。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E7%BB%84%E4%BB%B6%E5%88%97%E8%A1%A8/image.png)
+
+##### 图1-1 组件列表页面
+
+c）点开每一个组件，可以查看该组件的详细信息，您也可以在搜索栏输入查询条件来查询指定的组件。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E7%BB%84%E4%BB%B6%E5%88%97%E8%A1%A8/1-2.png)
+
+##### 图1-2 查看组件的详细信息
