--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/2. 导入自定义组件.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/2. 导入自定义组件.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.5 组件列表
+
+#### 4.5.2 导入自定义组件
+
+本节为您介绍如何导入自定义组件。
+
+##### 说明：(后端)全自动开发平台支持用户导入自定义组件，但需按照平台提供的Demo工程包进行组件的自定义，具体请参见《SoFlu（后端）全自动开发平台教程第8.4节：自定义组件》。
+
+#### 4.5.2.1 前提条件
+
+a）您需要拥有“组件列表”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.5.2.2 操作步骤
