--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/2. 导入自定义组件.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/2. 导入自定义组件.md
@@ -18,13 +18,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入全自动开发平台“组件列表”页面，单击导入。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E7%BB%84%E4%BB%B6%E5%88%97%E8%A1%A8/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196905466-9373843e-abfa-4814-82e7-aa1144f8280c.png)
 
 ##### 图2-1 全自动开发平台“组件列表”页面
 
 b）系统弹出“导入组件”窗口，选择上传需导入的自定义组件zip文件包。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E7%BB%84%E4%BB%B6%E5%88%97%E8%A1%A8/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196905495-d79add67-b8e7-45ea-aa1a-dea854d566d7.png)
 
 ##### 图2-2 上传自定义组件zip文件包
 
@@ -36,7 +36,7 @@ b1）导入的文件必须是zip文件包，且文件名中的版本号格式必
 b2）导入时，系统会判断zip文件包中的Jar包或者需导入的组件名称是否在当前环境中已存在，若已存在则无法导入，以保证每套环境中每个组件的唯一性，如下图所示。
 ```
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E7%BB%84%E4%BB%B6%E5%88%97%E8%A1%A8/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196905519-935dcb62-e2cf-4364-b4dd-2d9e2cbdf390.png)
 
 ##### 图2-3 上传的Jar包已存在
 
