--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/3. 查看svg组件图标.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/3. 查看svg组件图标.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.5 组件列表
+
+#### 4.5.3 查看svg组件图标
+
+本节为您介绍如何查看svg组件图标。
+
+##### 说明：svg图标管理，用于管理平台上所有组件的图标。
+
+#### 4.5.3.1 前提条件
+
+a）您需要拥有“组件列表”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.5.3.2 操作步骤
+
+a）进入全自动开发平台“组件列表”页面，单击svg图标管理。
