--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/4. 新增svg组件图标.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/5. 组件列表/4. 新增svg组件图标.md
@@ -16,13 +16,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入“svg图标管理”页面，单击查询框旁边的 + 按钮。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E7%BB%84%E4%BB%B6%E5%88%97%E8%A1%A8/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196908639-6f5f6165-266f-48d8-b82d-1d0c799a8e16.png)
 
 ##### 图4-1 单击 + 按钮
 
 b）页面展示出新增svg组件图标区域，输入图标的key值（即图标的关键字），并上传svg格式的图标。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E7%BB%84%E4%BB%B6%E5%88%97%E8%A1%A8/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196908678-80d2da5d-6699-4b6d-9eb9-10e56da37421.png)
 
 ##### 图4-2 输入图标相关信息
 
