--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/1. 导入扩展JAR包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/1. 导入扩展JAR包.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.6 扩展JAR包
+
+#### 4.6.1 导入扩展JAR包
+
+本节为您介绍如何在(后端)全自动开发平台导入扩展Jar包。
+
+##### 说明：导入扩展Jar包功能常用于用户在实际项目开发过程中，需接入第三方功能的情况，关于如何编写Jar包可参考《SoFlu（后端）全自动开发平台教程第8章：高阶专题》的自定义部分。。
+
+#### 4.6.1.1 前提条件
+
+a）您需要拥有“扩展Jar包”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.6.1.2 操作步骤
+
+a）进入(后端)全自动开发平台，单击上方菜单区扩展Jar包选项。
