--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/1. 导入扩展JAR包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/1. 导入扩展JAR包.md
@@ -18,19 +18,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入(后端)全自动开发平台，单击上方菜单区扩展Jar包选项。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%89%A9%E5%B1%95JAR%E5%8C%85/image.png)
+![image](https://user-images.githubusercontent.com/79617492/196908984-eda14266-2177-44e9-b8de-bc0f2dc5ad7e.png)
 
 ##### 图1-1 单击扩展Jar包选项
 
 b）进入扩展Jar包页面，单击导入。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%89%A9%E5%B1%95JAR%E5%8C%85/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196909033-0133f090-b65b-4e7e-b67a-a86009d018f5.png)
 
 ##### 图1-2 单击导入
 
 c）系统显示导入Jar包窗口，选择上传需导入的扩展Jar包文件。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%89%A9%E5%B1%95JAR%E5%8C%85/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196909061-ccc23727-19eb-4e6e-9537-bd568897d062.png)
 
 ##### 图1-3 上传扩展Jar包文件
 
