--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/1. 导入扩展JAR包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/1. 导入扩展JAR包.md
@@ -6,7 +6,7 @@
 
 本节为您介绍如何在(后端)全自动开发平台导入扩展Jar包。
 
-##### 说明：导入扩展Jar包功能常用于用户在实际项目开发过程中，需接入第三方功能的情况，关于如何编写Jar包可参考《SoFlu（后端）全自动开发平台教程第8章：高阶专题》的自定义部分。。
+##### 说明：导入扩展Jar包功能常用于用户在实际项目开发过程中，需接入第三方功能的情况，关于如何编写Jar包可参考《SoFlu（后端）全自动开发平台教程第8章：高阶专题》的自定义部分。
 
 #### 4.6.1.1 前提条件
 
