--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/2. 上传父pom文件.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/2. 上传父pom文件.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.6 扩展JAR包
+
+#### 4.6.2 上传父pom文件
+
+本节为您介绍如何上传父pom文件。
+
+##### 说明：说明： 父pom文件同样用于用户在实际项目开发过程中需要扩展的功能，具体的编辑方式可参见《SoFlu（后端）全自动开发平台教程第8章：高阶专题》的自定义部分。
+
+#### 4.6.2.1 前提条件
+
+a）您需要拥有“扩展Jar包”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.6.1.2 操作步骤
