--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/2. 上传父pom文件.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/2. 上传父pom文件.md
@@ -18,12 +18,12 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入(后端)全自动开发平台“扩展Jar包”页面，单击上传父pom文件选项。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%89%A9%E5%B1%95JAR%E5%8C%85/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196912541-8a65c368-5e64-4322-ac71-8883409cc265.png)
 
 ##### 图2-1 单击上传父pom文件选项
 
 b）系统显示上传父pom文件窗口，选择上传所需的父pom文件，单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%89%A9%E5%B1%95JAR%E5%8C%85/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196912570-f976d382-2ede-40c3-b9f2-0a9a56459b3d.png)
 
 ##### 图2-2 上传所需的父pom文件
