--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/3. 查看扩展JAR包历史版本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/6. 扩展JAR包/3. 查看扩展JAR包历史版本.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.6 扩展JAR包
+
+#### 4.6.3 查看扩展JAR包历史版本
+
+您可以在平台中查看上传扩展Jar包的所有历史版本，并选择是否删除历史版本，以避免数据冗余、节省储存空间。
+
+#### 4.6.2.1 前提条件
+
+a）您需要拥有“扩展Jar包”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.6.2.2 操作步骤
+
+a）进入(后端)全自动开发平台，选择上方菜单区“扩展Jar包”选项，进入扩展Jar包页面。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%89%A9%E5%B1%95JAR%E5%8C%85/3-1.png)
+
+##### 图3-1 进入扩展Jar包页面
