--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/1. 默认数据库管理/1. 启用或关闭默认数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/1. 默认数据库管理/1. 启用或关闭默认数据库.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.7 数据库配置
+
+#### 4.7.1 默认数据库管理
+
+#### 4.7.1.1 启用或关闭默认数据库
+
+本节为您介绍如何启用或关闭默认数据库。
+
+##### 说明：数据库配置中默认数据库管理即为管理用户在新增数据库连接时可选的数据库类型，平台目前支持MySQL和Oracle数据库。
+
+#### 4.7.1.1.1 前提条件
+
+a）您需要拥有“数据库配置”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
