--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/1. 默认数据库管理/1. 启用或关闭默认数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/1. 默认数据库管理/1. 启用或关闭默认数据库.md
@@ -15,3 +15,17 @@
 a）您需要拥有“数据库配置”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.7.1.1.2 操作步骤
+
+a）进入(后端)全自动开发平台，单击上方菜单区数据库配置选项。
+
+b）进入数据库配置页面，选择默认数据库管理页签，您可以看到平台目前支持的默认数据库类型。
+
+##### 注意：此处默认支持的数据库类型仅限新增数据库连接的情况，新增SQL组时中间件支持的数据库类型不仅限于这两种。
+
+c）通过数据库表格最后一列是否启用选项的开关，即可启用或关闭默认数据库。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E9%85%8D%E7%BD%AE/1.%20%E9%BB%98%E8%AE%A4%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/image.png)
+
+##### 图1-1 启用或关闭默认数据库
