--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/2. 默认数据类型管理/2. 修改默认数据类型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/2. 默认数据类型管理/2. 修改默认数据类型.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.7 数据库配置
+
+#### 4.7.2 默认数据类型管理
+
+#### 4.7.2.2 修改默认数据类型
+
+本节为您介绍如何修改默认数据类型。
+
+#### 4.7.2.2.1 前提条件
+
+a）您需要拥有“数据库配置管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
