--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/2. 默认数据类型管理/3. 查询默认数据类型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/2. 默认数据类型管理/3. 查询默认数据类型.md
@@ -19,3 +19,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）进入(后端)全自动开发平台，选择数据库配置管理 > 默认数据类型管理，系统显示“默认数据类型管理”页面。
 
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E9%85%8D%E7%BD%AE/2.%20%E9%BB%98%E8%AE%A4%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B%E7%AE%A1%E7%90%86/3-1.png)
+
+##### 图3-1 “默认数据类型管理”页面
+
+b）在查询条件区域，输入所需查询数据类型名称的关键字内容，单击搜索按钮或按回车键，列表中即会显示符合查询条件的信息。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E9%85%8D%E7%BD%AE/2.%20%E9%BB%98%E8%AE%A4%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B%E7%AE%A1%E7%90%86/3-2.png)
+
+##### 图3-2 输入需查询数据类型名称的关键字
