--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/3. 默认数据列管理/1. 新增默认数据列.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/7. 数据库配置/3. 默认数据列管理/1. 新增默认数据列.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.7 数据库配置
+
+#### 4.7.3 默认数据列管理
+
+#### 4.7.3.1 新增默认数据列
+
+本节为您介绍如何新增默认数据列。
+
+##### 说明：“默认数据列管理”用于管理用户在数据库设计中新增数据表时，系统默认显示的数据列。
+
+#### 4.7.3.1.1 前提条件
+
+a）您需要拥有“数据库配置管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.7.3.1.2 操作步骤
+
+a）进入(后端)全自动开发平台，选择上方菜单区数据库配置 > 默认数据列表管理，系统显示“默认数据列表管理”页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E9%85%8D%E7%BD%AE/3.%20%E9%BB%98%E8%AE%A4%E6%95%B0%E6%8D%AE%E5%88%97%E7%AE%A1%E7%90%86/image.png)
