--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/8. 插件中心/1. 查看插件.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/8. 插件中心/1. 查看插件.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.8 插件中心
+
+#### 4.8.1 查看插件
+
+本节为您介绍如何查看平台上的所有插件。
+
+#### 4.8.1.1 前提条件
+
+a）您需要拥有“插件中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.8.1.2 操作步骤
+
+a）进入(后端)全自动开发平台，单击上方菜单区插件中心选项。
+
+b）进入“插件中心”页面，您可以查看平台上可使用的所有插件，同时通过搜索栏查询指定插件。
