--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/8. 插件中心/2. 导入自定义插件.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/8. 插件中心/2. 导入自定义插件.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.8 插件中心
+
+#### 4.8.2 导入自定义插件
+
+本节为您介绍如何导入自定义插件。
+
+##### 说明：当平台上可使用的插件无法满足您的开发需求时，您可以导入自定义插件，但需按照平台提供的Demo工程包进行插件的自定义，具体请参见《SoFlu（后端）全自动开发平台教程第8.3节：自定义插件》。
+
+#### 4.8.2.1 前提条件
+
+a）您需要拥有“插件中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.8.2.2 操作步骤
+
+a）进入(后端)全自动开发平台“插件中心”页面，单击搜索栏右侧导入选项。
