--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/1. 查看函数库中心.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/1. 查看函数库中心.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.9 函数库中心
+
+#### 4.9.1 查看函数库中心
+
+(后端)全自动开发平台函数库中心整合了平台使用到的所有函数，包括用户自行上传的自定义函数、系统函数、平台级自定义函数。
+
+#### 4.8.2.1 前提条件
+
+a）您需要拥有“函数库中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.8.2.2 操作步骤
+
+a）进入(后端)全自动开发平台，单击上方菜单区函数库中心选项。
