--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/1. 查看函数库中心.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/1. 查看函数库中心.md
@@ -25,3 +25,7 @@ c）找到对应的函数，单击查看函数的具体信息。
 ##### 图1-1 查看函数的具体信息
 
 d）系统显示“方法列表”页面，该页面显示当前函数下所有的方法，您可以通过搜索栏查询函数中具体的方法信息。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E5%87%BD%E6%95%B0%E5%BA%93%E4%B8%AD%E5%BF%83/1-2.png)
+
+##### 图1-2 “方法列表”页面
