--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/2. 导入自定义函数.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/2. 导入自定义函数.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.9 函数库中心
+
+#### 4.9.2 导入自定义函数
+
+本节为您介绍如何导入自定义函数。
+
+##### 说明：(后端)全自动开发平台支持用户导入自定义函数，但需按照平台提供的Demo工程包进行函数的自定义，具体请参见《SoFlu（后端）全自动开发平台教程第8.2节：自定义函数》。
+
+#### 4.9.2.1 前提条件
+
+a）您需要拥有“函数库中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.9.2.2 操作步骤
+
+a）进入(后端)全自动开发平台“函数库中心”页面，单击导入选项。
