--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/2. 导入自定义函数.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/9. 函数库中心/2. 导入自定义函数.md
@@ -17,3 +17,21 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 #### 4.9.2.2 操作步骤
 
 a）进入(后端)全自动开发平台“函数库中心”页面，单击导入选项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E5%87%BD%E6%95%B0%E5%BA%93%E4%B8%AD%E5%BF%83/2-1.png)
+
+##### 图2-1 单击导入选项
+
+b）系统弹出导入函数页面，选择上传所需的自定义函数zip文件包后，单击确定即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E5%87%BD%E6%95%B0%E5%BA%93%E4%B8%AD%E5%BF%83/2-2.png)
+
+##### 图2-2 上传自定义函数zip文件包
+
+```
+说明：
+
+b1）导入的文件必须是.zip文件包且文件名中的版本号格式必须为纯数字x.x.x，否则系统将提示错误无法导入。
+
+b2）导入时，系统会判断zip文件包中的Jar包或者需导入的函数名称是否在当前环境中已存在，若已存在则无法导入，以保证每套环境中每个函数的唯一性，此时您根据系统提示进行修改后，重新导入即可。
+```
