--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/10. 调用链图/1. 查看项目调用链图.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/10. 调用链图/1. 查看项目调用链图.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.10 调用链图
+
+#### 4.10.1 查看项目调用链图
+
+通过静态调用链图，用户可以清晰得知项目中加载的所有资源实例类型及对应的资源实例。
+
+#### 4.10.1.1 操作步骤
+
+a）进入(后端)全自动开发平台，单击页面上方菜单区调用链图选项。
+
+b）系统显示查看调用链图页面，选择需要分析的项目名称，单击开始分析，您便可以看到该项目的调用链图。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B0%83%E7%94%A8%E9%93%BE%E5%9B%BE/image.png)
+
+##### 图1-1 项目的调用链图
