--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/11. 导入导出记录/1. 查看项目导入导出记录.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/11. 导入导出记录/1. 查看项目导入导出记录.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.11 导入导出记录
+
+#### 4.11.1 查看项目导入导出记录
+
+项目导入导出记录页面展示了当前租户下所有项目和接口的导入导出记录详细信息，用户可以在导出记录中对已授权租户进行取消授权操作，取消授权后对应租户将无法导入该项目或者接口。
+
+#### 4.11.1.1 操作步骤
+
+a）进入(后端)全自动开发平台，单击页面上方菜单区导入导出记录选项。
+
+b）系统显示项目导入导出记录页面，您可以输入查询条件查询指定的导入导出记录。
+
+c）找到需要进行取消授权操作的导出记录，单击详情。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/11.%20%E5%AF%BC%E5%85%A5%E5%AF%BC%E5%87%BA%E8%AE%B0%E5%BD%95/image.png)
+
+##### 图1-1 单击详情
