--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/11. 导入导出记录/1. 查看项目导入导出记录.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/11. 导入导出记录/1. 查看项目导入导出记录.md
@@ -17,3 +17,15 @@ c）找到需要进行取消授权操作的导出记录，单击详情。
 ![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/11.%20%E5%AF%BC%E5%85%A5%E5%AF%BC%E5%87%BA%E8%AE%B0%E5%BD%95/image.png)
 
 ##### 图1-1 单击详情
+
+d）进入导出记录详情页面，即可在资产共享信息表格中查看到授权导出的租户ID列表，单击操作列取消授权按钮即可取消对应租户的授权。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/11.%20%E5%AF%BC%E5%85%A5%E5%AF%BC%E5%87%BA%E8%AE%B0%E5%BD%95/1-2.png)
+
+##### 图1-2 取消对应租户的授权
+
+e）系统提示“是否确定取消授权”，单击确定即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/11.%20%E5%AF%BC%E5%85%A5%E5%AF%BC%E5%87%BA%E8%AE%B0%E5%BD%95/1-3.png)
+
+##### 图1-3 单击确定
