--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/1. 配置项目流程分支覆盖率.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/1. 配置项目流程分支覆盖率.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.12 管理配置
+
+#### 4.12.1 配置项目流程分支覆盖率
+
+a）流程分支覆盖率：即接口流程分支覆盖率（也可简称为接口覆盖率），指接口在执行测试用例时，接口所有测试用例所经过接口流程分支占接口总流程分支的比率，若接口流程分支覆盖率越高，则说明该接口测试用例情况更加完善，接口正确性更高。
+
+b）项目流程分支覆盖率：用于规范整个项目中所有接口测试用例情况、提升接口质量，通过配置项目流程分支覆盖率，系统便可以筛选出项目中接口覆盖率小于项目流程分支覆盖率的接口，并对这些接口不予发版，只有达到规定的项目流程分支覆盖率才可以发版；您可以在发版记录中查看项目的未发版数据，即可找到未达标的接口，若没有对指定项目配置流程分支覆盖率，则该项目发版时将会发版项目中的所有接口，不会对接口产生约束。
+
+本节为您介绍如何配置项目流程分支覆盖率，以及如何查看项目未发版数据。
+
+#### 4.12.1.1 操作步骤
+
+a）进入(后端)全自动开发平台，单击上方菜单区管理配置选项，系统显示管理配置页面，单击新增。
