--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/1. 配置项目流程分支覆盖率.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/1. 配置项目流程分支覆盖率.md
@@ -29,3 +29,17 @@ c）对项目进行发版。
 ![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/1-3.png)
 
 ##### 图1-3 对项目进行发版
+
+d）查看项目发版记录。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/1-4.png)
+
+##### 图1-4 查看项目发版记录
+
+e）查看未发版数据中的未达标接口。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/1-5.png)
+
+##### 图1-5 查看未发版数据中的未达标接口
+
+##### 注意：未发版数据不会存在于项目部署包中，故部署项目时，流程覆盖率未达标接口也不存在。
