--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/2. 分享项目接口文档.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/2. 分享项目接口文档.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.12 管理配置
+
+#### 4.12.2 分享项目接口文档
+
+您可以在平台创建项目接口文档的分享链接，其他用户可通过该分享链接查看对应的项目接口文档，分享用户可选择是否对链接进行加密，若设置了加密，则其他用户需要通过正确的密码才可访问项目接口文档，否则该接口文档为公开类型，可被直接打开。
+
+#### 4.12.2.1 操作步骤
+
+a）进入平台管理配置页面，选择“分享项目接口文档”页签，单击“新增”即可创建指定项目接口文档的分享链接。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/2-1.png)
+
+##### 图2-1 创建指定项目接口文档的分享链接
+
+b）系统显示“新增分享文档页面”，选择需分享的项目，设置是否对项目接口文档进行加密，若打开了加密按钮，请同时输入密码，所有信息填写完成后，单击“确定”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/2-2.png)
+
+##### 图2-2 配置加密信息
