--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/2. 分享项目接口文档.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/12. 管理配置/2. 分享项目接口文档.md
@@ -10,13 +10,13 @@
 
 a）进入平台管理配置页面，选择“分享项目接口文档”页签，单击“新增”即可创建指定项目接口文档的分享链接。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/197140942-6df06ad7-9104-4bd9-880b-afc951664dd1.png)
 
 ##### 图2-1 创建指定项目接口文档的分享链接
 
 b）系统显示“新增分享文档页面”，选择需分享的项目，设置是否对项目接口文档进行加密，若打开了加密按钮，请同时输入密码，所有信息填写完成后，单击“确定”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/197140967-3b4cfd1b-e6ea-4e48-9bbd-91cbd1db01a1.png)
 
 ##### 图2-2 配置加密信息
 
@@ -31,16 +31,16 @@ b2）若设置了加密，则该接口文档需通过正确的密码才可访问
 
 c）分享记录创建完成后，您可以查看链接后复制，也可以直接单击如下图所示的“复制链接”按钮。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/197140988-7439e790-ecee-405f-94d6-9305ee16d647.png)
 
 ##### 图2-3 复制链接
 
 d）其他用户获取到分享链接后，若分享链接设置了加密，请输入正确的密码后，单击“确定”即可查看接口文档。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/2-4.png)
+![image](https://user-images.githubusercontent.com/79617492/197141022-dcff5131-626b-44a2-a5a7-3f6fef146f06.png)
 
 ##### 图2-4 输入密码
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E7%AE%A1%E7%90%86%E9%85%8D%E7%BD%AE/2-5.png)
+![image](https://user-images.githubusercontent.com/79617492/197141052-87443060-b78c-450b-abac-7d6867ac643c.png)
 
 ##### 图2-5 查看接口文档
