--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/1. 新增接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/1. 新增接口.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.1 新增接口
+
+本节主要介绍如何在项目中新增接口的具体操作方法。
+
+#### 4.13.1.1.1 操作步骤
+
+a）在项目管理页面中，选择“接口管理”，单击已新增模块后的“+”，选择“新增接口”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/image.png)
+
+##### 图1-1 选择“新增接口”
