--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/1. 新增接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/1. 新增接口.md
@@ -36,3 +36,28 @@ b2）接口协议：根据接口选择对应协议，HTTP或Wbsocket；Websocker
 b3）HTTP方法：根据接口需求选择对应的请求方法，平台支持POST、GET、PUT、DELETE、HEAD、TRACE、OPTIONS、PATCH等8种HTTP方法；
 
 b4）数据模拟：模拟mock接口数据，具体操作可参考《SoFlu（后端）全自动开发平台教程第4.13.3.1节：创建接口模拟数据》；
+
+b5）是否异步：开启按钮后，当前接口会交给其它线程执行，释放主线程，若未开启按钮，则当前接口由主线程执行完成；
+
+b6）更多设置：包含业务标签、指标上报、监控上报，详情可参考《SoFlu（后端）全自动开发平台教程第4.13.6节：集成监控接口》；
+
+b7）设计文档：用于描述接口设计原理，详情可参考《SoFlu（后端）全自动开发平台教程第4.13.7节：接口设计文档》。
+```
+
+c）进入配置入参列表页面，选择对应的请求参数，配置自定义的接口入参字段以及字段类型，配置完成单击提交。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/1-4.png)
+
+##### 图1-4 配置自定义的接口入参字段以及字段类型
+
+```
+说明：
+
+c1）若开启“集合”按钮，则说明该字段为列表类型，列表中元素为设置的字段类型；若没有开启，则说明该字段为基本数据类型、对象类型或者实体模型类型。
+
+c2）“验证类型”、“验证的值”以及“输出结果”，属于字段验证内容；字段验证即对字段类型进行验证，是否符合类型规范，相当于前置条件，只有所有字段验证通过后才会执行接口流程图；若字段验证不通过，则会直接输出设置的输出结果内容，不执行接口流程图。
+
+c3）“验证类型”中的内容会根据所选字段类型发生变化，选择完验证类型后，需输入对应验证的值，同时选择验证字段后的输出结果。
+
+c4）“输出结果类型配置”用于配置接口的输出结果，详情可参考《SoFlu（后端）全自动开发平台教程第6.2.8节：输出结果组件》。
+```
