--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/1. 新增接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/1. 新增接口.md
@@ -61,3 +61,18 @@ c3）“验证类型”中的内容会根据所选字段类型发生变化，选
 
 c4）“输出结果类型配置”用于配置接口的输出结果，详情可参考《SoFlu（后端）全自动开发平台教程第6.2.8节：输出结果组件》。
 ```
+
+d）单击进入模型编辑，进入接口流程图编辑界面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/1-5.png)
+
+##### 图1-5 进入接口流程图编辑界面
+
+e）在窗体视图界面，您可以根据实际开发需求，从左侧控件库中拖拽所需组件至中间的绘图面板，连接好接口流程图，并在右侧属性配置栏，配置好组件的相关属性，流程图编辑完成后，可单击上方保存并退出选项退出界面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/1-6.png)
+
+##### 图1-6 编辑组件流程图
+
+```
+说明：
