--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/2. 导出接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/2. 导出接口.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.2 导出接口
+
+全自动开发平台支持在不同项目之间导出导入接口，本节将为您介绍导出接口的具体操作过程。
+
+#### 4.13.1.2.1 操作步骤
+
+a）进入全自动开发平台指定项目的接口管理页面，单击“新增接口模块”旁的三个点按钮，选择“导出接口”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/2-1.png)
+
+##### 图2-1 选择“导出接口”
