--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/2. 导出接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/2. 导出接口.md
@@ -31,3 +31,15 @@ b2）平台默认含模块一起导出，若导出时未设置包含模块，且
 ```
 
 c）填写授权信息，即填写允许导入该接口文件的租户ID以及授权码。
+
+```
+说明：
+
+c1）若您没有填写授权信息，导出的接口文件包所有租户都可以导入使用。
+
+c2）您可以在全自动开发平台首页右上角，单击用户头像查看租户ID。
+
+c3）可以授权给多个租户，即可以填写多个授权租户ID。
+```
+
+d）选择需导出的所有接口，单击“确定”即可将接口文件包下载到本地。
