--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/3. 导入接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/3. 导入接口.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.3 导入接口
+
+全自动开发平台支持用户在不同项目之间导入接口，本节为您介绍导入接口的具体操作过程。
+
+#### 4.13.1.3.1 前提条件
+
+a）您需要确定您所在租户已获得导入接口文件包的授权。
+
+b）您已获取需导入接口文件包在导出时设置的授权码。
+
+#### 4.13.1.3.2 操作步骤
+
+a）进入全自动开发平台指定项目的接口管理页面，单击“新增接口模块”旁的三个点按钮，选择“导入接口”。
