--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/4. 快速创建接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/4. 快速创建接口.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.4 快速创建接口
+
+系统提供该功能，您可以通过导入swagger接口文档快速创建接口，无需手动创建接口模块和接口入参。当导入成功后，直接画流程图即可，若出现特殊情况无法解析参数或接口时，则需进行手动修改。
+
+本节将为您介绍快速创建接口的具体操作步骤。
+
+#### 4.13.1.4.1 操作步骤
+
+a）进入平台功能模块界面，选择接口管理，系统显示接口管理页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-1.png)
+
+##### 图4-1 接口管理页面
