--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/4. 快速创建接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/4. 快速创建接口.md
@@ -29,3 +29,17 @@ c）系统显示“导入接口文档快速创建接口”页面。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-3.png)
 
 ##### 图4-3 “导入接口文档快速创建接口”页面
+
+d）选择并上传swagger格式的接口文档，单击导入。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-4.png)
+
+##### 图4-4 选择并上传swagger格式的接口文档
+
+##### 注意：在上传文件时，请注意页面黄色区域的“导入提示”。
+
+e）稍等片刻，您可以看到接口列表下新增了很多接口模块。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-5.png)
+
+##### 图4-5 接口列表下新增了很多接口模块
