--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/4. 快速创建接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/4. 快速创建接口.md
@@ -14,25 +14,25 @@
 
 a）进入平台功能模块界面，选择接口管理，系统显示接口管理页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/197467648-5628058d-466a-4acc-a912-60f1b332111a.png)
 
 ##### 图4-1 接口管理页面
 
 b）单击“新增接口模块”旁的三个点按钮，选择“导入接口文档快速创建接口”。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/197467664-88587a64-b351-44f7-8a06-43640a419323.png)
 
 ##### 图4-2 选择“导入接口文档快速创建接口”
 
 c）系统显示“导入接口文档快速创建接口”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/197467685-105f569d-4dad-4f79-8060-4ee9e1047cd4.png)
 
 ##### 图4-3 “导入接口文档快速创建接口”页面
 
 d）选择并上传swagger格式的接口文档，单击导入。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-4.png)
+![image](https://user-images.githubusercontent.com/79617492/197467702-e41649aa-c2ce-4b1b-9039-182048f82ac5.png)
 
 ##### 图4-4 选择并上传swagger格式的接口文档
 
@@ -40,6 +40,6 @@ d）选择并上传swagger格式的接口文档，单击导入。
 
 e）稍等片刻，您可以看到接口列表下新增了很多接口模块。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/4-5.png)
+![image](https://user-images.githubusercontent.com/79617492/197467718-627798eb-f32c-470e-88ea-92c63aa45f89.png)
 
 ##### 图4-5 接口列表下新增了很多接口模块
