--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/5. 查看接口引用关系列表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/5. 查看接口引用关系列表.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.5 查看接口引用关系列表
+
+用户可以通过引用关系列表查看每个接口拥有的所有资产，包含资产名称、资产类型、资产归属类型以及资产版本号等信息。
+
+本节将为您具体介绍如何查看接口的引用关系列表。
+
+#### 4.13.1.5.1 操作步骤
+
+a）进入全自动开发平台指定项目的接口管理页面，选择任意一个接口（本节以分布式锁接口为例），单击接口旁的三个点按钮，选择“引用关系列表”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/5-1.png)
+
+##### 图5-1 选择“引用关系列表”
