--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/6. 查看接口流程执行轨迹.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/6. 查看接口流程执行轨迹.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.6 查看接口流程执行轨迹
+
+接口执行测试用例之后，用户可以根据接口的流程执行轨迹来查看接口执行的完整过程。在流程执行轨迹中，用户不仅可以查看到接口中每个组件的执行次数，每次执行的开始时间、结束时间以及每次执行的耗时时间，还可以查看每个组件的节点数据，通过流程节点数据以及耗时时长，用户可以对流程进行相应的优化。
+
+#### 4.13.1.6.1 操作步骤
+
+a）对接口执行测试用例之后，查看测试用例的执行结果，单击流程执行轨迹选项。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/6-1.png)
+
+##### 图6-1 单击流程执行轨迹选项
