--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/6. 查看接口流程执行轨迹.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/6. 查看接口流程执行轨迹.md
@@ -12,34 +12,34 @@
 
 a）对接口执行测试用例之后，查看测试用例的执行结果，单击流程执行轨迹选项。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/197473553-f9c604f8-7982-4cec-a94e-aa569ce74942.png)
 
 ##### 图6-1 单击流程执行轨迹选项
 
 b）进入接口的流程执行轨迹页面，您可以看到接口此次测试用例的流程执行轨迹，若组件颜色显示绿色，则说明流程经过该组件，若组件颜色显示白色，则说明流程未经过该组件。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/197473608-1711a98b-7bd8-476e-a1cc-c1e3dbc3e778.png)
 
 ##### 图6-2 接口的流程执行轨迹页面
 
 c）将鼠标移至任意一个组件，您便可以查看该组件的执行次数，每次执行的开始时间、结束时间以及每次执行的耗时时间。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/6-3.png)
+![image](https://user-images.githubusercontent.com/79617492/197473632-2a752db7-eb62-439d-aef4-abcb6c8f693e.png)
 
 ##### 图6-3 查看组件执行状况
 
 d）双击任意一个组件，您便可以查看该组件的流程节点数据。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/6-4.png)
+![image](https://user-images.githubusercontent.com/79617492/197473663-bfffc74d-d17b-4514-8211-26a7e31735f4.png)
 
 ##### 图6-4 查看该组件的流程节点数据
 
 ##### 说明：若接口流程图中存在子流程组件循环执行多次的情况，您可以在流程执行轨迹中右键单击子流程组件选择查看任意一条子流程的流程执行轨迹，如下图所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/6-5.png)
+![image](https://user-images.githubusercontent.com/79617492/197473682-40621530-9d1a-4692-9cb0-abee89d2d176.png)
 
 ##### 图6-5 查看任意一条子流程的流程执行轨迹
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/6-6.png)
+![image](https://user-images.githubusercontent.com/79617492/197473701-f18011be-418d-4202-8dbb-1074bc747314.png)
 
 ##### 图6-6 子流程循环数据
