--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/7. 获取接口异常数据快照.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/7. 获取接口异常数据快照.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.7 获取接口异常数据快照
+
+项目部署完成后，当某个接口执行异常时，用户可以通过系统提供的API接口去获取接口异常时整个流程数据的数据快照，便于开发者定位问题。本节将为您介绍获取接口异常数据快照的具体操作过程。
+
+```
+说明：
+
+a）API接口：http://ip:端口/flowexceptionlog/{projectId}/exception/interfaceId/{ interfaceId}
+
+b）ip：启动本地执行引擎的服务器地址；
+
+c）端口：启动本地执行引擎的服务器端口，默认为8080；
+
+d）{projectId}：对应项目的ID，使用时需去掉“{}”符号，可在项目页面地址栏找到；
+
+e）{interfaceId}：表示对应的接口ID，使用时需去掉“{}”符号，可在接口的流程图编辑页面地址栏找到。
+```
