--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/7. 获取接口异常数据快照.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/7. 获取接口异常数据快照.md
@@ -67,3 +67,15 @@ d）进入对应的项目，在地址栏中找到projectId，如图7-6所示。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/7-6.png)
 
 ##### 图7-6 获取项目id
+
+e）进入对应接口的流程图编辑页面，在地址栏中找到interfaceId，如图7-7所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/7-7.png)
+
+##### 图7-7 获取接口id
+
+f）在浏览器地址栏中输入对应的API接口地址，回车即可看到接口的异常信息（即数据快照），如图7-8所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/7-8.png)
+
+##### 图7-8 接口异常数据快照
