--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/8. 调用WebSocket协议实现主动推送消息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/8. 调用WebSocket协议实现主动推送消息.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.1 接口
+
+#### 4.13.1.8 调用WebSocket协议实现主动推送消息
+
+WebSocket协议是一种在单个TCP连接上进行全双工通信的协议，它允许服务端主动向客户端推送数据，客户端和服务端只需要完成一次握手，两者之间就可以创建持久性的连接并双向传输数据，这使得客户端和服务端之间的数据交换变得更加简单。
+
+(后端)全自动开发平台支持WebSocket协议，但需配合客户端通信组件的使用，本节将通过具体实例为您介绍如何调用WebSocket协议实现主动推送消息。
+
+##### 注意：若不对客户端通信组件的客户端编号进行选择（即设置为空），便可以实现群发消息，服务器会将所有响应的信息群发给建立关系的客户端。
+
+#### 4.13.1.8.1 结果展示
+
+实例主要通过服务端向客户端主动推送计数变量值，实现倒计时效果，点击“倒计时开始”按钮即可实现数字逐渐递减。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/8-1.png)
+
+##### 图8-1 倒计时效果
