--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/8. 调用WebSocket协议实现主动推送消息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/1. 接口/8. 调用WebSocket协议实现主动推送消息.md
@@ -105,3 +105,25 @@ d5）客户端通信组件【建立连接、主动推送数据】：用于与web
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/8-16.png)
 
 ##### 图8-16 客户端通信组件
+
+e）完成流程图编辑之后，保存并退出。
+
+f）提交并发布接口。
+
+g）编辑测试用例，录入计数变量的值。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/8-17.png)
+
+##### 图8-17 编辑测试用例
+
+h）执行测试用例，查看测试用例的结果，可以看到响应内容为计数变量的值。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/8-18.png)
+
+##### 图8-18 查看测试用例的结果
+
+i）与前端做好联调后，启动前端程序，查看效果。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/1.%20%E6%8E%A5%E5%8F%A3/8-19.png)
+
+##### 图8-19 倒计时演示
