--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/2. 接口调试/1. 在线调试接口流程图.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/2. 接口调试/1. 在线调试接口流程图.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.2 接口调试
+
+#### 4.13.2.1 在线调试接口流程图
+
+用户在执行测试用例时，可进入调试列表，新增在线调试。在流程图执行之前对流程组件设置断点，然后执行流程图进行调试、查看节点数据，也可以手工调整一些数值，然后再继续调试后面的流程，调试完成可以查看到最终的调试结果。
+
+下文将通过示例为您介绍如何新增调试列表、进行在线调试，以及查看流程节点数据和流程走向。
+
+#### 4.13.2.1.1 操作步骤
+
+a）单击“接口管理”，选择要调试的接口。
