--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/2. 接口调试/1. 在线调试接口流程图.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/2. 接口调试/1. 在线调试接口流程图.md
@@ -29,3 +29,21 @@ c）单击“调试列表”，进入调试列表页面。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2.%20%E6%8E%A5%E5%8F%A3%E8%B0%83%E8%AF%95/1-3.png)
 
 ##### 图1-3 进入调试列表页面
+
+d）单击“新增”，弹出新增调试窗口。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2.%20%E6%8E%A5%E5%8F%A3%E8%B0%83%E8%AF%95/1-4.png)
+
+##### 图1-4 单击“新增”
+
+##### 注意：只允许存在一条调试数据，已调试完成的数据无法再次调试，如需要再次调试，先将原数据删除后，再新增新的调试列表数据。
+
+e）填写调试名称并设置调试人员。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2.%20%E6%8E%A5%E5%8F%A3%E8%B0%83%E8%AF%95/1-5.png)
+
+##### 图1-5 填写调试名称并设置调试人员
+
+##### 说明：只有指定的调试人员才有权限调试当前的测试用例，在调试列表编辑可修改调试人员。
+
+f）单击“调试”，进入流程图调试页面。
