--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/3. 数据模拟/1. 创建接口模拟数据.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/3. 数据模拟/1. 创建接口模拟数据.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.3 数据模拟
+
+#### 4.13.3.1 创建接口模拟数据
+
+本节主要介绍如何创建接口模拟数据。
+
+##### 说明：新增接口时，用户可以通过数据模拟来模拟当前接口的返回数据。模拟数据可以自定义，或者使用excel模板导入，在接口提交发版后，可在接口文档中查看该接口的模拟数据。
+
+#### 4.13.3.1.1 操作步骤
+
+a）进入项目管理页面，系统默认显示接口管理页面，新增一个接口，填写好接口的基本信息后，打开接口的数据模拟按钮，如图1-1所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3.%20%E6%95%B0%E6%8D%AE%E6%A8%A1%E6%8B%9F/image.png)
+
+##### 图1-1 接口基本信息页面
