--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/1. 新增流程变量.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/1. 新增流程变量.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.4 流程编辑器
+
+#### 4.13.4.1 新增流程变量
+
+系统提供该功能，用户在编辑流程时，可以新增全局变量或局部变量，在使用其他组件时，可以直接选择该全局变量或局部变量的字段。
+
+#### 4.13.4.1.1 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.13.4.1.2 操作步骤
+
+a）进入流程编辑页面，单击“变量管理”，如图1-1所示。
