--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/2. 流程图完整性校验.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/2. 流程图完整性校验.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.4 流程编辑器
+
+#### 4.13.4.2 流程图完整性校验
+
+流程图在保存时系统会自动进行校验，只允许一个开始节点且每个分支必须要有结束节点，不允许存在无头无尾的流程图，若出现不规范的地方，系统会弹出错误提示。
+
+#### 4.13.4.2.1 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.13.4.2.2 操作步骤
+
+a）进行流程编辑器页面，拖拽赋值组件至画布，该赋值组件没有上一步的连接节点，单击“保存”，如图2-1所示。
