--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/3. 流程图格式化.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/3. 流程图格式化.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.4 流程编辑器
+
+#### 4.13.4.3 流程图格式化
+
+系统提供该功能，流程编辑器中提供格式化选项，用户自定义完成流程图编辑之后，单击格式化，即可让流程图展示更加规范美观。
+
+本节将为您展示格式化功能的具体效果。
+
+#### 4.13.4.3.1 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
