--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/3. 流程图格式化.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/3. 流程图格式化.md
@@ -15,3 +15,19 @@
 a）您需要拥有“流程编辑器”功能的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.13.4.3.2 操作示例
+
+a）进入接口的流程编辑器页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/3-1.png)
+
+##### 图3-1 进入模型编辑
+
+b）绘制接口的流程图（格式化前）。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/3-2.png)
+
+##### 图3-2 绘制接口的流程图
+
+c）单击流程编辑器上方格式化选项。
